--- a/frontend/src/pages/plates/page.module.css
+++ b/frontend/src/pages/plates/page.module.css
@@ -4,30 +4,42 @@
     align-items: center;
     justify-content: center;
     gap: 1em;
-    padding: 2em 0em 1em 3em; 
-
+    padding: 0.5em;
+    margin-top: 1em;
 }
 
 .plateItemsContainer {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 1em;
-    padding: 2em 0em 1em 3em; 
-
+    padding: 0.5em;
 }
 
 @media screen and (max-width: 1080px) {
     .plateItemsContainer {
         grid-template-columns: repeat(2, 1fr);
         gap: 1em;
-        padding: 1em 1em 1em 3em; 
-        
+        display: grid;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 }
 
 @media screen and (max-width: 900px) {
     .plateItemsContainer {
         grid-template-columns: repeat(2, 1fr);
+        display: grid;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 1.5em;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .plateItemsContainer {
+        grid-template-columns: repeat(1, 1fr);
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -35,33 +47,24 @@
     }
 }
 
-@media screen and (max-width: 700px) {
-    .plateItemsContainer {
-        grid-template-columns: repeat(2, 1fr);
-   
-    }
-}
-
 @media screen and (max-width: 1080px) {
     .pageContainer {
         gap: 1em;
-        padding: 1em 1em 1em 3em; 
-     
+        padding: 1.5em;
     }
 }
 
 @media screen and (max-width: 900px) {
     .pageContainer {
         gap: 1em;
-        padding: 1em 1em 1em 3em; 
-
+        padding: 1.5em;
     }
 }
 
 @media screen and (max-width: 700px) {
     .pageContainer {
         gap: 1em;
-        
+        padding: 1.5em;
     }
 }
 
