--- a/frontend/src/pages/plates/page.module.css
+++ b/frontend/src/pages/plates/page.module.css
@@ -19,7 +19,7 @@
     .plateItemsContainer {
         grid-template-columns: repeat(2, 1fr);
         gap: 1em;
-        display: grid;
+        display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
@@ -29,7 +29,7 @@
 @media screen and (max-width: 900px) {
     .plateItemsContainer {
         grid-template-columns: repeat(2, 1fr);
-        display: grid;
+        display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
