--- a/frontend/src/pages/home/page.module.css
+++ b/frontend/src/pages/home/page.module.css
@@ -4,50 +4,36 @@
     align-items: center;
     justify-content: center;
     gap: 2em;
-    padding: 2em;
+  padding: 2em;
 
-}
-
-.topSectionContainer {
-    text-align: center;
-}
-
-.topSession {
-    text-align: center;
-    font-size: 15pt;
 }
 
 .foodSection {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 1.3em;
+    gap: 2em;
 	background-color: #754F44;
     color: #faf0ca;
     padding: 2em;
     border-radius: 2em;
-    text-align: center;
-  
 }
 
 .foodSection div {
     display: flex;
     flex-direction: column;
-    text-align: left;
+    text-align: center;
     gap: 0.5em;
 }
 
-
 .socialButtonsContainer {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1em;
-    padding-top: 20px;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 0.2em;
 }
 
 .socialButton {
-    font-size: x-large;
+    font-size: large;
     width: 100%;
-
 }
 
 .contactSection {
@@ -65,12 +51,11 @@
 @media screen and (max-width: 700px) {
     .foodSection {
         grid-template-columns: repeat(1, 1fr);
-        
     }
 }
 
 @media screen and (min-width: 1000px) {
     .socialButtonsContainer {
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(4, 1fr);
     }
 }
