--- a/frontend/src/components/navbar/navbar.module.css
+++ b/frontend/src/components/navbar/navbar.module.css
@@ -30,6 +30,12 @@
     padding: 0.5em;
 }
 
+.navbarLinksContainer {
+    font-size: large;
+    color: #FDD692;
+}
+
+
 .mobileNavbarItems {
     display: none;
 }
