--- a/frontend/src/pages/cart/page.module.css
+++ b/frontend/src/pages/cart/page.module.css
@@ -1,3 +1,18 @@
+.cartLink {
+    display: flex;
+	gap: 0.5em;
+	align-items: center;
+	justify-content: center;
+	width: fit-content;
+	background-color: #754F44;
+    color: #FDD692;
+	border: none;
+	padding: 1em;
+	border-radius: 0.5em;
+	cursor: pointer;
+	font-size: medium;
+}
+
 .itemContainer {
     display: grid;
     grid-template-columns: auto auto;
