--- a/frontend/src/pages/cart/page.module.css
+++ b/frontend/src/pages/cart/page.module.css
@@ -60,8 +60,13 @@
 
 .confirmBtn {
     position: fixed;
-    font-size: x-large;
+    font-size: medium;
+   
+    color: #754F44;
+    background-color: #FDD692;
     bottom: 2em;
+    right: 2em;
+    width: 200px;
 }
 
 .cartContainer {
@@ -100,6 +105,23 @@
         height: 330px;
     }
 }
+
+@media screen and (max-width: 480px) {
+    .confirmBtn {
+        position: fixed;
+        font-size: medium;   
+        color: #754F44;
+        background-color: #FDD692;
+        right: 260px;
+        height:80px;
+        width: 100px;
+        padding: 10px 20px;
+    }
+}
+
+
+
+
 
 
 
