correções direcinoamento e alertas

--- a/frontend/src/pages/cart/page.module.css
+++ b/frontend/src/pages/cart/page.module.css
@@ -62,8 +62,8 @@
 .confirmBtn {
     position: fixed;
     font-size: medium;
-    color: #754F44;
-    background-color: #FDD692;
+    color: #3f2b25;
+    background-color:#B18842;
     bottom: 2em;
     right: 2em;
     width: 200px;
