--- a/frontend/src/pages/profile/page.module.css
+++ b/frontend/src/pages/profile/page.module.css
@@ -5,7 +5,23 @@
     padding: 2em;
     max-width: 1280px;
     padding: 2em;
+
+} 
+
+.pagePerfilContainer {
+    background-color: #754F44;
+    padding: 20px;
+    border-radius: .5em;
+    color: #ffffff;
 }
+
+.pagePerfilContainer button {
+    margin-top: 10px;
+    height: 40px;
+    background-color: #e1ce7a;
+    color: #3f2b25;
+}
+
 
 .orderContainer {
     display: flex;
@@ -53,5 +69,15 @@
 @media screen and (max-width: 800px) {
     .ordersContainer {
         grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .pagePerfilContainer {
+        background-color: #754F44;
+        padding: 30px;
+        border-radius: .5em;
+        color: #ffffff;
+        font-size: large;
     }
 }
