--- a/frontend/src/components/navbar/navbar.module.css
+++ b/frontend/src/components/navbar/navbar.module.css
@@ -17,21 +17,28 @@
     max-width: 1280px;
     margin: 0 auto;
 }
-
+.drawer {
+    width: 200px;
+}
 .navbarLink {
     color: #FDD692;
+}
+
+
+.loggout{
+    cursor: pointer;
+
 }
 
 .navbarLinksContainer {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 1em;
-    padding: 0.5em;
+    gap: 0.7em;
 }
 
 .navbarLinksContainer {
-    font-size: large;
+
     color: #FDD692;
 }
 
